.vscode/allianceuat_compare/force-app/main/default/objects/SMS_Provider_Configuration__mdt/SMS_Provider_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>SMS Provider Configuration</label>
    <pluralLabel>SMS Providers Configurations</pluralLabel>
</CustomObject>