.vscode/allianceuat_compare/force-app/main/default/objects/SMS_Provider_Configuration__mdt/fields/Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Name__c</fullName>
    <label>Application Name</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>