.vscode/allianceuat_compare/force-app/main/default/objects/SMS_Provider_Configuration__mdt/fields/SMS_Cost_Centre_c__c.field-meta.xml
<CustomField>
    <fullName>SMS_Cost_Centre_c__c</fullName>
    <description>The name of the cost centre associated with this configuration</description>
    <label>SMS_Cost_Centre__c</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>